kubernetes/flux/production/apps/uptime-kuma/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: uptime-kuma
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: louislam/uptime-kuma:1
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: data
              mountPath: /app/data
              readOnly: false
            - name: ca-chain
              mountPath: /etc/ssl/cert/ca-chain.cert.pem
              readOnly: true
              subPath: ca-chain.cert.pem
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dashboard-pvc
            readOnly: false
        - configMap:
            defaultMode: 420
            optional: true
            name: ca-chain
          name: ca-chain
