kubernetes/flux/production/apps/uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: uptime-kuma
  labels:
    app: dashboard
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app: dashboard
